TL-29205 topics: Corrected location of expand all & collapse all link

--- a/server/course/format/topics/less/roots.less
+++ b/server/course/format/topics/less/roots.less
@@ -23,8 +23,9 @@
 
 .tw-formatTopics {
     &__all_toggles {
-        margin: @totara_style-spacing_small 0;
+        padding: @totara_style-spacing_small 0;
         text-align: right;
+        clear: right;
     }
 
     &__all_toggles &__collapse_all {
