--- a/server/theme/legacy/scss/format/topics.scss
+++ b/server/theme/legacy/scss/format/topics.scss
@@ -23,8 +23,9 @@
 
 .tw-formatTopics {
   &__all_toggles {
-    margin: var(--gap-2) 0;
+    padding: var(--gap-2) 0;
     text-align: right;
+    clear: right;
   }
 
   &__all_toggles &__collapse_all {
